--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="divider_grey">#88808080</color>
+    <color name="activated_item_foreground">#44888888</color>
+    <color name="pressed_item_foreground">#08000000</color>
 </resources>
