--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,6 +4,8 @@
     <dimen name="normal_text_size">14sp</dimen>
     <dimen name="bigger_text_size">16sp</dimen>
     <dimen name="big_text_size">18sp</dimen>
+    <dimen name="actionbar_text_size">21sp</dimen>
+    <dimen name="alarm_text_size">48sp</dimen>
 
     <!--Position-->
     <dimen name="small_margin">4dp</dimen>
@@ -11,4 +13,8 @@
     <dimen name="normal_margin">12dp</dimen>
     <dimen name="activity_margin">16dp</dimen>
     <dimen name="bigger_margin">20dp</dimen>
+    <dimen name="dragselect_hotspot_height">56dp</dimen>
+    <dimen name="fab_list_bottom_padding">68dp</dimen>
+    <dimen name="timer_button_small_size">50dp</dimen>
+    <dimen name="timer_button_size">56dp</dimen>
 </resources>
