--- a/app/src/main/res/layout/item_timer.xml
+++ b/app/src/main/res/layout/item_timer.xml
@@ -23,6 +23,7 @@
             android:layout_height="wrap_content"
             android:includeFontPadding="false"
             android:textSize="@dimen/alarm_text_size"
+            android:textColor="@color/color_text"
             app:layout_constraintEnd_toStartOf="@id/timer_reset"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -36,6 +37,7 @@
             android:includeFontPadding="false"
             android:maxLines="1"
             android:textSize="@dimen/bigger_text_size"
+            android:textColor="@color/color_text"
             app:layout_constraintEnd_toEndOf="@id/timer_time"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/timer_time"
@@ -51,6 +53,7 @@
             android:padding="@dimen/normal_margin"
             android:src="@drawable/ic_reset_vector"
             android:visibility="visible"
+            app:tint="@color/color_text"
             app:layout_constraintBottom_toBottomOf="@+id/timer_play_pause"
             app:layout_constraintEnd_toStartOf="@+id/timer_play_pause"
             app:layout_constraintStart_toEndOf="@id/timer_time"
@@ -67,6 +70,7 @@
             android:background="?attr/selectableItemBackgroundBorderless"
             android:padding="@dimen/activity_margin"
             android:src="@drawable/ic_play_vector"
+            app:tint="@color/color_text"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/timer_reset"
