--- a/app/src/main/res/menu/delete.xml
+++ b/app/src/main/res/menu/delete.xml
@@ -5,5 +5,6 @@
         android:id="@+id/cab_delete"
         android:icon="@drawable/ic_delete_vector"
         android:title="@string/delete"
+        android:iconTint="@color/color_text"
         app:showAsAction="ifRoom" />
 </menu>
