--- a/app/src/main/res/drawable/selector.xml
+++ b/app/src/main/res/drawable/selector.xml
@@ -8,7 +8,7 @@
     <item>
         <ripple android:color="@color/pressed_item_foreground">
             <item android:id="@android:id/mask">
-                <color android:color="@android:color/white"/>
+                <color android:color="@color/color_bg"/>
             </item>
         </ripple>
     </item>
