--- a/app/src/main/res/layout/dialog_edit_timer.xml
+++ b/app/src/main/res/layout/dialog_edit_timer.xml
@@ -23,7 +23,6 @@
             android:padding="@dimen/activity_margin"
             android:textSize="@dimen/bigger_text_size"
             android:text="05:00"
-            android:textColor="@color/color_text"
             app:layout_constraintTop_toTopOf="parent" />
 
         <RelativeLayout
@@ -49,13 +48,12 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/small_margin"
                 android:layout_toEndOf="@+id/edit_timer_vibrate_icon"
-                android:background="@null"
                 android:clickable="false"
                 android:layoutDirection="rtl"
                 android:padding="@dimen/medium_margin"
-                android:buttonTint="@color/color_text"
                 android:text="@string/vibrate"
-                android:textSize="@dimen/bigger_text_size" />
+                android:textSize="@dimen/bigger_text_size"
+                app:buttonTint="@color/color_text" />
 
         </RelativeLayout>
 
@@ -70,7 +68,6 @@
             android:padding="@dimen/activity_margin"
             android:textSize="@dimen/bigger_text_size"
             android:text="Default Alarm"
-            android:textColor="@color/color_text"
             app:layout_constraintTop_toBottomOf="@+id/edit_timer_vibrate_holder" />
 
         <LinearLayout
@@ -121,7 +118,6 @@
                     android:maxLines="1"
                     android:singleLine="true"
                     android:textSize="@dimen/normal_text_size"
-                    android:textColor="@color/color_text"
                     android:textCursorDrawable="@drawable/line" />
 
             </com.google.android.material.textfield.TextInputLayout>
