--- a/app/src/main/res/layout/item_select_alarm_sound.xml
+++ b/app/src/main/res/layout/item_select_alarm_sound.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.AppCompatRadioButton
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/item_select_alarm_sound"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingBottom="@dimen/activity_margin"
     android:paddingTop="@dimen/activity_margin"
-    android:buttonTint="@color/color_text"/>
+    app:buttonTint="@color/color_text"/>
