--- a/app/src/main/res/layout/actionbar_title.xml
+++ b/app/src/main/res/layout/actionbar_title.xml
@@ -6,5 +6,5 @@
     android:background="?attr/selectableItemBackground"
     android:gravity="center_vertical|start"
     android:paddingEnd="@dimen/medium_margin"
-    android:textColor="@color/color_text"
+    android:textColor="@color/color_focus_text"
     android:textSize="@dimen/actionbar_text_size" />
