--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,8 +5,10 @@
     <color name="activated_item_foreground">#44888888</color>
     <color name="pressed_item_foreground">#08000000</color>
     <color name="divider_grey">#88808080</color>
+    <color name="color_focus_bg">@color/black</color>
+    <color name="color_focus_text">@color/white</color>
 
-    <color name="grey">#FF5A5A5A</color>
+    <color name="grey">#FF3A3A3A</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
