--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,7 +14,8 @@
     <dimen name="activity_margin">16dp</dimen>
     <dimen name="bigger_margin">20dp</dimen>
     <dimen name="dragselect_hotspot_height">56dp</dimen>
-    <dimen name="fab_list_bottom_padding">68dp</dimen>
+    <dimen name="fab_list_bottom_padding">70dp</dimen>
     <dimen name="timer_button_small_size">50dp</dimen>
     <dimen name="timer_button_size">56dp</dimen>
+    <dimen name="bottom_button_size">60dp</dimen>
 </resources>
