--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -66,7 +66,7 @@
                     android:layout_toRightOf="@id/cancel_btn"
                     android:background="?attr/selectableItemBackground"
                     android:textColor="@color/color_text"
-                    android:textSize="@dimen/actionbar_text_size" />
+                    android:textSize="@dimen/bigger_text_size" />
 
                 <ImageButton
                     android:id="@+id/select_all_btn"
@@ -142,6 +142,7 @@
             android:textAllCaps="false"
             android:textColor="@color/color_text"
             android:textSize="@dimen/normal_text_size"
+            android:fontWeight="900"
             app:layout_behavior="@string/bottom_sheet_behavior"
             app:elevation="2dp" />
 
