--- a/app/src/main/res/layout/dialog_edit_timer.xml
+++ b/app/src/main/res/layout/dialog_edit_timer.xml
@@ -21,7 +21,7 @@
             android:drawableTint="@color/color_text"
             android:drawablePadding="@dimen/normal_margin"
             android:padding="@dimen/activity_margin"
-            android:textSize="@dimen/bigger_text_size"
+            android:textSize="@dimen/normal_text_size"
             android:text="05:00"
             android:textColor="@color/color_text"
             app:layout_constraintTop_toTopOf="parent" />
@@ -53,7 +53,7 @@
                 android:layoutDirection="rtl"
                 android:padding="@dimen/medium_margin"
                 android:text="@string/vibrate"
-                android:textSize="@dimen/bigger_text_size"
+                android:textSize="@dimen/normal_text_size"
                 app:buttonTint="@color/color_text" />
 
         </RelativeLayout>
@@ -67,7 +67,7 @@
             android:drawableTint="@color/color_text"
             android:drawablePadding="@dimen/normal_margin"
             android:padding="@dimen/activity_margin"
-            android:textSize="@dimen/bigger_text_size"
+            android:textSize="@dimen/normal_text_size"
             android:text="Default Alarm"
             android:textColor="@color/color_text"
             app:layout_constraintTop_toBottomOf="@+id/edit_timer_vibrate_holder" />
@@ -119,7 +119,7 @@
                     android:paddingTop="16dp"
                     android:maxLines="1"
                     android:singleLine="true"
-                    android:textSize="@dimen/normal_text_size"
+                    android:textSize="@dimen/small_text_size"
                     android:textCursorDrawable="@drawable/line"
                     android:theme="@style/CustomTextCursor" />
 
