--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- Text Size -->
-    <dimen name="normal_text_size">14sp</dimen>
-    <dimen name="bigger_text_size">16sp</dimen>
+    <dimen name="small_text_size">14sp</dimen>
+    <dimen name="normal_text_size">16sp</dimen>
     <dimen name="big_text_size">18sp</dimen>
-    <dimen name="actionbar_text_size">21sp</dimen>
-    <dimen name="alarm_text_size">48sp</dimen>
+    <dimen name="bigger_text_size">20sp</dimen>
+    <dimen name="timer_text_size">48sp</dimen>
 
     <!--Position-->
     <dimen name="small_margin">4dp</dimen>
