--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -25,4 +25,21 @@
     <style name="CustomTextCursor">
         <item name="colorPrimary">@color/color_text</item>
     </style>
+    <style name="BackBtn">
+        <item name="colorControlNormal">@color/color_text</item>
+    </style>
+    <style name="SettingHolderCheckboxStyle">
+        <item name="android:paddingStart">@dimen/activity_margin</item>
+        <item name="android:paddingTop">@dimen/medium_margin</item>
+        <item name="android:paddingEnd">@dimen/activity_margin</item>
+        <item name="android:paddingBottom">@dimen/medium_margin</item>
+    </style>
+    <style name="SettingCheckboxStyle">
+        <item name="android:background">@null</item>
+        <item name="android:clickable">false</item>
+        <item name="android:layoutDirection">rtl</item>
+        <item name="android:paddingStart">@dimen/medium_margin</item>
+        <item name="android:textSize">@dimen/normal_text_size</item>
+        <item name="android:textColor">@color/color_text</item>
+    </style>
 </resources>
