--- a/app/src/main/res/layout/dialog_custom_interval_picker.xml
+++ b/app/src/main/res/layout/dialog_custom_interval_picker.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/dialog_custom_interval_scrollview"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -17,17 +19,32 @@
             android:id="@+id/dialog_custom_interval_hint"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/value">
+            android:layout_marginStart="@dimen/medium_margin"
+            android:layout_marginEnd="@dimen/medium_margin"
+            android:hint="@string/value"
+            app:boxBackgroundColor="@color/color_bg"
+            app:boxBackgroundMode="outline"
+            app:boxCornerRadiusBottomEnd="10dp"
+            app:boxCornerRadiusBottomStart="10dp"
+            app:boxCornerRadiusTopEnd="10dp"
+            app:boxCornerRadiusTopStart="10dp"
+            app:boxStrokeColor="@color/color_text"
+            app:hintTextColor="@color/color_text">
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/dialog_custom_interval_value"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:digits="0123456789"
-                android:inputType="number"
-                android:maxLength="5"
-                android:textCursorDrawable="@null"
-                android:textSize="@dimen/normal_text_size" />
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/dialog_custom_interval_value"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingBottom="16dp"
+            android:paddingTop="16dp"
+            android:digits="0123456789"
+            android:inputType="number"
+            android:maxLength="5"
+            android:maxLines="1"
+            android:singleLine="true"
+            android:textSize="@dimen/normal_text_size"
+            android:textCursorDrawable="@drawable/line"
+            android:theme="@style/CustomTextCursor" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -37,7 +54,7 @@
             android:layout_height="wrap_content"
             android:paddingTop="@dimen/activity_margin">
 
-            <androidx.appcompat.widget.AppCompatCheckBox
+            <androidx.appcompat.widget.AppCompatRadioButton
                 android:id="@+id/dialog_radio_seconds"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -45,7 +62,7 @@
                 android:paddingBottom="@dimen/activity_margin"
                 android:text="@string/seconds_raw" />
 
-            <androidx.appcompat.widget.AppCompatCheckBox
+            <androidx.appcompat.widget.AppCompatRadioButton
                 android:id="@+id/dialog_radio_minutes"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -53,7 +70,7 @@
                 android:paddingBottom="@dimen/activity_margin"
                 android:text="@string/minutes_raw" />
 
-            <androidx.appcompat.widget.AppCompatCheckBox
+            <androidx.appcompat.widget.AppCompatRadioButton
                 android:id="@+id/dialog_radio_hours"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -61,7 +78,7 @@
                 android:paddingBottom="@dimen/activity_margin"
                 android:text="@string/hours_raw" />
 
-            <androidx.appcompat.widget.AppCompatCheckBox
+            <androidx.appcompat.widget.AppCompatRadioButton
                 android:id="@+id/dialog_radio_days"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
