--- a/app/src/main/res/layout/dialog_my_time_picker.xml
+++ b/app/src/main/res/layout/dialog_my_time_picker.xml
@@ -15,6 +15,9 @@
         app:np_formatter="%02d"
         app:np_max="23"
         app:np_min="0"
+        app:np_textColor="@color/color_text"
+        app:np_selectedTextColor="@color/color_text"
+        app:np_dividerColor="@color/color_text"
         app:np_selectedTextSize="@dimen/big_text_size"
         app:np_textSize="@dimen/big_text_size" />
 
@@ -35,6 +38,9 @@
         app:np_formatter="%02d"
         app:np_max="59"
         app:np_min="0"
+        app:np_textColor="@color/color_text"
+        app:np_selectedTextColor="@color/color_text"
+        app:np_dividerColor="@color/color_text"
         app:np_selectedTextSize="@dimen/big_text_size"
         app:np_textSize="@dimen/big_text_size" />
 
@@ -54,6 +60,9 @@
         app:np_formatter="%02d"
         app:np_max="59"
         app:np_min="0"
+        app:np_textColor="@color/color_text"
+        app:np_selectedTextColor="@color/color_text"
+        app:np_dividerColor="@color/color_text"
         app:np_selectedTextSize="@dimen/big_text_size"
         app:np_textSize="@dimen/big_text_size" />
 
