--- a/app/src/main/res/layout/dialog_my_time_picker.xml
+++ b/app/src/main/res/layout/dialog_my_time_picker.xml
@@ -28,7 +28,8 @@
         android:gravity="center"
         android:padding="@dimen/medium_margin"
         android:text=":"
-        app:np_textSize="@dimen/big_text_size" />
+        android:textSize="@dimen/bigger_text_size"
+        android:textColor="@color/color_text" />
 
     <com.shawnlin.numberpicker.NumberPicker
         android:id="@+id/my_time_picker_minutes"
@@ -50,7 +51,8 @@
         android:layout_height="wrap_content"
         android:padding="@dimen/medium_margin"
         android:text=":"
-        app:np_textSize="@dimen/big_text_size" />
+        android:textSize="@dimen/bigger_text_size"
+        android:textColor="@color/color_text" />
 
     <com.shawnlin.numberpicker.NumberPicker
         android:id="@+id/my_time_picker_seconds"
